# dune-common

./: .git-blame-ignore-revs  .gitlab-ci.yml  .uncrustify.cfg  CHANGELOG.md  CMakeLists.txt  LICENSE.md  config.h.cmake  dune-uncrustify.cfg  dune.module  pyproject.toml  uncrustify-diff
cmake/modules/: AddBLASLapackFlags.cmake  AddGMPFlags.cmake  AddMETISFlags.cmake  AddMPFRFlags.cmake  AddMPIFlags.cmake  AddPTScotchFlags.cmake  AddParMETISFlags.cmake  AddPythonFlags.cmake  AddQuadMathFlags.cmake  AddSuiteSparseFlags.cmake  AddTBBFlags.cmake  AddThreadsFlags.cmake  AddVcFlags.cmake  CMakeLists.txt  CheckCXXFeatures.cmake  DuneAddLibrary.cmake  DuneAddPybind11Module.cmake  DuneCMakeCompat.cmake  DuneCommonMacros.cmake  DuneDoc.cmake  DuneDoxygen.cmake  DuneEnableAllPackages.cmake  DuneExecuteProcess.cmake  DuneExportToolchain.cmake  DuneFindOrFetchPackage.cmake  DuneInstance.cmake  DuneMPI.cmake  DuneMacros.cmake  DuneModuleDependencies.cmake  DuneModuleInformation.cmake  DuneParseArguments.cmake  DunePathHelper.cmake  DunePkgConfig.cmake  DunePolicy.cmake  DuneProject.cmake  DunePythonCommonMacros.cmake  DunePythonDeprecations.cmake  DunePythonEmbed.cmake  DunePythonFindPackage.cmake  DunePythonInstallPackage.cmake  (+17 more)
cmake/pkg/: dune-common-config.cmake.in
cmake/scripts/: CMakeLists.txt  GenerateDuneSuperBuild.cmake  compiler.sh.in  conf.py.in  index.rst.in  run-env-replacement.sh.in  run-in-dune-env.sh.in  set-dune-pythonpath.sh.in  sphinx_cmake_dune.py
cmake/test/: CMakeLists.txt
cmake/test/dune_common_standalone/: CMakeLists.txt  dune-common-standalone.cc
doc/buildsystem/: dune-common.rst
doc/comm/: CMakeLists.txt  indexset.cc  poosc08.cc  poosc08_test.cc
doc/doxygen/: CMakeLists.txt  Doxylocal  Doxystyle
doc/sphinx/: .gitignore  conf.py  index.rst  requirements.txt
dune/: CMakeLists.txt
dune/common/: CMakeLists.txt  alignedallocator.hh  arraylist.hh  assert.hh  assertandreturn.hh  assume.hh  bartonnackmanifcheck.hh  bigunsignedint.hh  binaryfunctions.hh  bitsetvector.hh  boundschecking.hh  classname.hh  concept.hh  concepts.hh  conditional.hh  config.h.in  config.hh  config.hh.in  conj.hh  copyableoptional.hh  debugalign.cc  debugalign.hh  debugallocator.cc  debugallocator.hh  debugstream.hh  densematrix.hh  densetensor.hh  densetensormixin.hh  densetensorspan.hh  densevector.hh  densevectorspan.hh  densevectorview.hh  deprecated.hh  diagonalmatrix.hh  documentation.hh  dotproduct.hh  dynmatrix.hh  dynmatrixev.hh  dyntensor.hh  dynvector.hh  (+85 more)
dune/common/concepts/: CMakeLists.txt  collection.hh  field.hh  identity.hh  inverse.hh  linearmap.hh  matrix.hh  multitype.hh  vector.hh  vectorspace.hh
dune/common/concepts/archetypes/: field.hh
dune/common/concepts/test/: CMakeLists.txt  test-matrixconcept.cc  test-multitypeconcept.cc  test-vectorconcept.cc
dune/common/deprecated/: CMakeLists.txt  deprecated.hh
dune/common/parallel/: CMakeLists.txt  communication.hh  communicator.hh  future.hh  indexset.hh  indicessyncer.hh  interface.hh  localindex.hh  mpi.hh  mpicommunication.hh  mpidata.hh  mpifuture.hh  mpiguard.hh  mpihelper.cc  mpihelper.hh  mpipack.hh  mpitraits.hh  plocalindex.hh  remoteindices.hh  selection.hh  variablesizecommunicator.hh
dune/common/parallel/benchmark/: CMakeLists.txt  mpi_collective_benchmark.cc
dune/common/simd/: CMakeLists.txt  base.hh  defaults.hh  interface.hh  io.hh  loop.hh  simd.hh  standard.hh  test.cc  test.hh  vc.hh
dune/common/simd/test/: CMakeLists.txt  looptest.cc.in  looptest_vector.cc.in  standardtest.cc.in  standardtest_vector.cc.in  vcarraytest.cc.in  vcarraytest.hh.in  vctest_mask.cc.in  vctest_simdarray.cc.in  vctest_simdmaskarray.cc.in  vctest_vector.cc.in  vcvectortest.cc.in  vcvectortest.hh.in
dune/common/std/: CMakeLists.txt  algorithm.hh  apply.hh  compare.hh  default_accessor.hh  extents.hh  functional.hh  iterator.hh  iterator_accessor.hh  layout_left.hh  layout_right.hh  layout_stride.hh  make_array.hh  mdarray.hh  mdspan.hh  optional.hh  scope.hh  span.hh  type_traits.hh  utility.hh  variant.hh
dune/common/test/: CMakeLists.txt  alignedallocatortest.cc  arithmetictestsuite.hh  arithmetictestsuitetest.cc  arraylisttest.cc  arraytest.cc  assertandreturntest.cc  autocopytest.cc  bigunsignedinttest.cc  bitsetvectortest.cc  boundscheckingmvtest.cc  boundscheckingoptest.cc  boundscheckingtest.cc  calloncetest.cc  check_fvector_size.cc  check_fvector_size_fail.cc  checkmatrixinterface.hh  classnametest.cc  collectorstream.hh  concept.cc  concepts.cc  constexprifelsetest.cc  copyableoptionaltest.cc  debugalignsimd.cc.in  debugalignsimdtest.cc.in  debugaligntest.cc  densematrixassignmenttest.cc  densevectorassignmenttest.cc  densevectorspantest.cc  densevectortest.cc  diagonalmatrixtest.cc  dummyiterator.hh  dunethrowtest.cc  dynmatrixtest.cc  dyntensortest.cc  dynvectortest.cc  eigenvaluestest.cc  enumsettest.cc  filledarraytest.cc  fmatrixtest.cc  (+64 more)
dune/python/: CMakeLists.txt  embed.hh
dune/python/common/: densematrix.hh  densevector.hh  dimrange.hh  dynmatrix.hh  dynvector.hh  fmatrix.hh  fvecmatregistry.hh  fvector.hh  getdimension.hh  logger.hh  mpihelper.hh  numpycommdatahandle.hh  numpyvector.hh  parametertree.hh  pythonvector.hh  string.hh  tuplevector.hh  typeregistry.hh  vector.hh
dune/python/pybind11/: attr.h  buffer_info.h  cast.h  chrono.h  common.h  complex.h  embed.h  eval.h  functional.h  gil.h  iostream.h  numpy.h  operators.h  options.h  pybind11.h  pytypes.h  stl.h  stl_bind.h
dune/python/test/: CMakeLists.txt  compileparallel.py  pythontests.py  test_embed1.cc  test_embed2.cc
lib/: dunemodules.lib
python/: CMakeLists.txt  pyproject.toml.in
python/dune/: create.py  packagemetadata.py  plotting.py
python/dune/common/: CMakeLists.txt  __init__.py  _common.cc  _defaultfieldvector.cc  checkconfiguration.py  locking.py  module.py  project.py  registerfvector.hh
python/dune/generator/: CMakeLists.txt  __init__.py  algorithm.py  builder.py  cmakebuilder.py  generator.py  importclass.py  threadedgenerator.py
python/dune/typeregistry/: _typeregistry.cc
(+31 files in other folders)
